# Docforge_Hub

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
backend/: database.py  llm.py  main.py  models.py  queries.py  redis_client.py
backend/routes/: chat.py  company.py  departments.py  documents.py  downloads.py  enhance.py  expiry.py  notion.py  questions.py  sections.py  templates.py  versioning.py
citerag/: README.md
citerag/backend/: constants.py
citerag/backend/rag/: chunker.py  citations.py  embedder.py  retriever.py
citerag/backend/routes/: evaluate.py  retrieval.py
citerag/frontend/: app.py
database/schema/: company_context.sql  departments.sql  document_sections.sql  document_templates.sql  document_types.sql  documents.sql  question_answers.sql  template_questions.sql  template_sections.sql
frontend/: app.py  ui.py
frontend/pages/: generator.py  library.py  notion.py
frontend/utils/: api.py  styles.py
statecase/: README.md
statecase/backend/: redis_client.py
statecase/backend/graph/: memory.py
statecase/backend/prompts/: clarify_prompt.py
statecase/backend/routes/: assistant.py  tickets.py
statecase/frontend/: app.py
statecase/frontend/pages/: chat.py  tickets.py
