[project]
name = "docforge-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "llm>=0.28",
    "notion>=0.1.0",
    "numpy>=2.2.6",
    "openai>=2.26.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "streamlit>=1.55.0",
    "uuid>=1.30",
    "uvicorn>=0.41.0",
]
