[project]
name = "docforge-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datetime>=6.0",
    "document>=1.0",
    "docx>=0.2.4",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.3.4",
    "langchain-classic>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-openai>=1.1.12",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.10",
    "langsmith>=0.7.22",
    "llm>=0.28",
    "notion>=0.1.0",
    "notion-client>=3.0.0",
    "numpy>=2.2.6",
    "openai>=2.26.0",
    "paragraph>=1.2.1",
    "platypus>=1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.9.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "redis>=7.3.0",
    "regex>=2026.2.28",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "responses>=0.26.0",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
    "tiktoken>=0.12.0",
    "uuid>=1.30",
    "uvicorn>=0.41.0",
]
